# kirin

./: .clang-format  .gitmodules  CPPLINT.cfg  README.md
matlab/: forward.m  model.m  param_tuning.slx
requirements/: apt.txt  install_casadi.sh
src/joy_controller/: CMakeLists.txt
src/joy_controller/src/: joy_controller.cpp
src/kirin/: CMakeLists.txt  package.xml
src/kirin/gencode/: .gitignore  dphi.cpp  dphi.h  dr.cpp  dr.h  dr_data.cpp  dr_data.h  dr_initialize.cpp  dr_initialize.h  dr_terminate.cpp  dr_terminate.h  dr_types.h  dtheta.cpp  dtheta.h  fk_psi.cpp  fk_psi.h  fk_x.cpp  fk_x.h  fk_y.cpp  fk_y.h  ik_phi.cpp  ik_phi.h  ik_r.cpp  ik_r.h  ik_r_data.cpp  ik_r_data.h  ik_r_initialize.cpp  ik_r_initialize.h  ik_r_rtwutil.cpp  ik_r_rtwutil.h  ik_r_terminate.cpp  ik_r_terminate.h  ik_r_types.h  ik_theta.cpp  ik_theta.h  phi.cpp  phi.h  r.cpp  r.h  r_data.cpp  (+17 more)
src/kirin/include/kirin/: common_types.hpp  direct_manual_controller.hpp  frame.hpp  hand_tool_manager.hpp  joint_to_motor_converter.hpp  joy_controller.h  joy_controller.hpp  machine.hpp  manual_controller.h  motor_controller.hpp  optimized_path_generator.hpp  robot_joint_state_generator.hpp  utils.hpp  world_coord_manual_controller.hpp
src/kirin/launch/: blue.launch.py  kirin.launch.py  params.yaml  replay.launch.py  sim.yaml
src/kirin/main/: hand_tool_manager_node.cpp  jagariko_marker_publisher.cpp  jsk_visualize_node.cpp  kirin_main_executor.cpp  manual_controller_node.cpp  rapid_hand_controller_node.cpp  test_hand_tool_manager.cpp
src/kirin/main/test/: test_casadi.cpp  test_motor_communication.cpp  test_motor_controller.cpp  test_solver.cpp
src/kirin/resources/: fix.stl  jagariko.stl
src/kirin/resources/light/: fix.stl  phi.stl  phi_extend.stl  r.stl  theta.stl  z.stl
src/kirin/rviz/: kirin.rviz
src/kirin/src/: direct_manual_controller.cpp  hand_tool_manager.cpp  joint_to_motor_converter.cpp  joy_controller.cpp  machine.cpp  manual_controller.cpp  motor_controller.cpp  optimized_path_generator.cpp  robot_joint_state_generator.cpp  utils.cpp  world_coord_manual_controller.cpp
src/kirin/urdf/: field.urdf.xacro  kirin.urdf  kirin.urdf.xacro
src/kirin_msgs/: CMakeLists.txt  package.xml
src/kirin_msgs/msg/: AirState.msg  ColorLED.msg  DirectManual.msg  HandCoordManual.msg  HandPosition.msg  HandState.msg  Joint.msg  Motor.msg  MotorStateVector.msg  MoveMode.msg  ZAutoState.msg
src/kirin_msgs/srv/: SetAirState.srv  SetColorLED.srv  SetHandState.srv  SetTarget.srv  StartPlanarAutoMovement.srv  StartZAutoMovement.srv  ToggleHandState.srv
